Issue 31437: Radeox wikis lose paragraph spacing in new UX

--- a/core/resources/styles/scss/labkey/_labkey.scss
+++ b/core/resources/styles/scss/labkey/_labkey.scss
@@ -925,6 +925,10 @@ table.labkey-manage-display
     color: #2020BE;
     font-family: $lk-font-family-code;
   }
+
+  .paragraph {
+    margin: 0.83em 0;
+  }
 }
 
 .CodeMirror pre {
